Fix in-process compositing on Windows 10.

DidCreateAcceleratedSurfaceChildWindow was not being implemented so the rendering
window wasn't being reparented to the browser window.

BUG=640748
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2673433002
Cr-Commit-Position: refs/heads/master@{#448713}

Former-commit-id: 16305b01e5fa25c11eff50d34238bc6576781fa4